<resources>
    <string name="app_name">Login App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="registration_success">Successfully added to database</string>
    <string name="input_error_name">Name is missing</string>
    <string name="input_error_email">Enter your email</string>
    <string name="input_error_email_invalid">Enter valid email</string>
    <string name="input_error_password">Enter password</string>
    <string name="input_error_password_length">Password should be of atleast 6 letters</string>
    <string name="input_error_phone">Enter phone no</string>
    <string name="input_error_phone_invalid">Invalid phone number</string>
</resources>
